force-app/main/default/objects/Order2__c/Order2__c.object-meta.xml
<CustomObject>
    <label>Order2</label>
    <nameField>
        <displayFormat>ORD-{00000}</displayFormat>
        <label>Order Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>