force-app/main/default/objects/Order2__c/fields/Delivery_Comments__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Comments__c</fullName>
    <label>Delivery Comments</label>
    <type>TextArea</type>
</CustomField>