force-app/main/default/objects/Order2__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered Completely</fullName>
            </value>
            <value>
                <fullName>Delivered Partially</fullName>
            </value>
            <value>
                <fullName>Delivered Completely with returns</fullName>
            </value>
            <value>
                <fullName>Delivered Partially with returns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>