force-app/main/default/objects/Order2__c/fields/Grand_Total2__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total2__c</fullName>
    <label>Grand Total</label>
    <summarizedField>Order_Item2__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Order_Item2__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>