force-app/main/default/objects/Order2__c/fields/No_of_Items__c.field-meta.xml
<CustomField>
    <fullName>No_of_Items__c</fullName>
    <label>No of Items</label>
    <summaryForeignKey>Order_Item2__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>