force-app/main/default/objects/Order2__c/fields/Number_of_bags__c.field-meta.xml
<CustomField>
    <fullName>Number_of_bags__c</fullName>
    <label>Number of bags</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>